金額計算が累計されてなかった・・・

--- a/config/app.yml
+++ b/config/app.yml
@@ -19,22 +19,25 @@ app:
   program:
     # 基本設定
     base:
+      # ファイル一つに対する金額
+      file_price: 1000
+
       # 一行毎に発生する金額(円)
       line:
         # 通常行の値段
-        line_price: 500
+        line_price: 100
         # 制御処理行の値段
-        proc_line_price: 1000
+        proc_line_price: 200
         # コメント行の値段
-        comment_line_price: 100
+        comment_line_price: 50
 
       # メソッドに発生する値段(円)
       method:
-        price: 2000
+        price: 300
         # メソッド行数が長い場合に発生するペナルティ（コメントは含まず）
         max_line: 30
         # メソッド行数が長い場合に引かれる金額(通常の値段は別途入ります。)
-        max_line_over_price: -500
+        max_line_over_price: -200
 
     # Ruby設定(baseと同じ)
     ruby:
